After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668231 - wacom: Fix nav label's maximum page number
wacom: Fix nav label's maximum page number
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Wacom
unspecified
Other All
: Normal normal
: ---
Assigned To: Peter Hutterer
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-19 01:04 UTC by Jason Gerecke
Modified: 2012-01-20 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wacom: Fix nav label's maximum page number (1.03 KB, patch)
2012-01-19 01:04 UTC, Jason Gerecke
committed Details | Review

Description Jason Gerecke 2012-01-19 01:04:19 UTC
When multiple tablets are connected to a system the navigation button's label
reports the incorrect maximum number. For example, if three tablets are
connected, the three pages are reported as "1 of 2", "2 of 2", and "3 of 2".
Comment 1 Jason Gerecke 2012-01-19 01:04:22 UTC
Created attachment 205595 [details] [review]
wacom: Fix nav label's maximum page number

The label "X of Y" pages is incorrect when multiple tablets are plugged
in, with Y being one too small. The "num_pages" variable is already
decremented if necessary on line 70, making the ternary excessive.
Comment 2 Bastien Nocera 2012-01-20 12:55:24 UTC
Attachment 205595 [details] pushed as f2e9b90 - wacom: Fix nav label's maximum page number