wacom: Fix nav label's maximum page number

The label "X of Y" pages is incorrect when multiple tablets are plugged
in, with Y being one too small. The "num_pages" variable is already
decremented if necessary on line 70, making the ternary excessive.

https://bugzilla.gnome.org/show_bug.cgi?id=668231